Bug 142047 - Some links in the glossary not working
Summary: Some links in the glossary not working
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-22 08:54 UTC by Yukiko Bando
Modified: 2019-03-29 17:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed change (1.16 KB, patch)
2008-06-04 18:00 UTC, Eckhart Wörner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yukiko Bando 2007-02-22 08:54:04 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Mandriva RPMs
OS:                Linux

When I hover the mouse over a link under "References" in the glossary tool, the mouse pointer changes to a hand,  but none of the links work in Japanese interface.  Clicking on it doesn't take me to other reference item.  I don't have this problem if the locale is set to en_US.
Comment 1 Eckhart Wörner 2008-06-04 16:13:35 UTC
Looks like there's an escaping problem, e.g. doesn't work with links that contain blanks (with en_US).
Comment 2 Eckhart Wörner 2008-06-04 18:00:16 UTC
Created attachment 25123 [details]
Proposed change
Comment 3 cniehaus 2008-08-05 18:50:17 UTC
SVN commit 842624 by cniehaus:

I applied Eckhard patch. 

Yukiko, could you please test if this is fixed now? The fix will be in
KDE 4.1.1 and 4.2.0 (or in SVN as of now in case you compile KDE
yourself).

Sorry that the fix took that long...

BUG:142047


 M  +5 -4      kdeeduglossary.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842624