I applied Eckhard patch.

Yukiko, could you please test if this is fixed now? The fix will be in
KDE 4.1.1 and 4.2.0 (or in SVN as of now in case you compile KDE
yourself).

Sorry that the fix took that long...

BUG:142047

svn path=/trunk/KDE/kdeedu/libkdeedu/kdeeduui/kdeeduglossary.cpp; revision=842624